--- a/style.css
+++ b/style.css
@@ -1,1 +1,37 @@
-﻿
+﻿*{
+  box-sizing: border-box;
+}
+body{
+  background-color: rgb(100, 207, 100);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color:aliceblue;
+}
+
+p{
+  text-align: center;
+}
+
+
+.item{
+  border: 1px solid rgb(215, 206, 206);
+  display: flex;
+  background-color: aliceblue;
+  font-size: .9em;
+  border-radius: .5em;
+  color: rgb(40, 37, 37);
+}
+
+label{
+  display: block;
+  padding: 4% 0% 4% 4.3%;
+  border-left: 1px solid rgb(215, 206, 206);
+  color: rgba(0, 0, 0, 0.735);
+}
+
+input{
+  display: inline-block;
+  margin: 10px 15px;
+}
+5
